--- a/package.json
+++ b/package.json
@@ -6,7 +6,13 @@
         "@cloudnative/health-connect": "^2.0.0",
         "express": "4.17.1",
         "node-red": "^1.0.0",
-        "node-red-dashboard" : "^2.16.3"
+        "@tmus/node-red-contrib-differences": "1.1.1",
+        "node-red-contrib-discord-advanced": "2.3.1",
+        "node-red-dashboard": "2.30.0",
+        "node-red-node-sqlite": "1.0.0",
+        "node-red-contrib-queue-gate": "1.5.4",
+        "node-red-contrib-simple-message-queue": "0.2.7",
+        "node-red-node-ui-table": "0.3.11"
     },
     "devDependencies": {
         "chai": "^4.2.0",
